<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:layout_weight="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:textSize="40sp"/>
        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="25sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:background="@drawable/boederedit"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/des"
            android:gravity="top"
            android:background="@drawable/boederedit"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:text="@string/remind"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/tvChonGio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gio"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/tvChonNgay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ngay"
            android:textSize="40dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/type"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_marginLeft="20dp"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/spnType"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/tags"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/tagss"
            android:gravity="center_vertical"
            android:id="@+id/tvTags"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/week"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/weeks"
            android:gravity="center_vertical"
            android:id="@+id/tvWeeks"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginHorizontal="20dp">
    <Button
        android:id="@+id/btnTune"
        android:textAllCaps="false"
        android:background="@drawable/boderbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tune"/>

    </LinearLayout>
    </LinearLayout>
</layout>